[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.1"
ws = "0.9.2"
env_logger = "0.6"
mio = "0.6.14"
mio-extras = "2.0"
time = "0.1.39"
chrono= "0.4.0"
rusqlite = "0.26.3"
warp = "0.3"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

